LPS-128029 Ignore warnings on JDK 11